force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/ucinn_ascendv2__Post_Code__c.object-meta.xml
<CustomObject>
    <description>Majors tied to the degree.</description>
    <label>Post Code</label>
    <nameField>
        <label>Post Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>