force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/fields/ucinn_ascendv2__Degree__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree__c</fullName>
    <label>Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>