force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/fields/ucinn_ascendv2__Degree_Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Description__c</fullName>
    <label>Degree Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>