force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/fields/ucinn_ascendv2__Degree_Level_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Degree_Level_Code__c</fullName>
    <label>Degree Level Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>