force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/fields/ucinn_ascendv2__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>