force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/fields/ucinn_ascendv2__Major_Specialty__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Major_Specialty__c</fullName>
    <label>Major / Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>