force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/fields/ucinn_ascendv2__School_1_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__School_1_Name_Formula__c</fullName>
    <formula>ucinn_ascendv2__School_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School 1 Name</label>
    <type>Text</type>
</CustomField>