force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/fields/ucinn_ascendv2__School_2__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__School_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School 2</label>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Post Codes (School 2)</relationshipLabel>
    <relationshipName>Post_Codes_School_2</relationshipName>
    <type>Lookup</type>
</CustomField>