force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/fields/ucinn_ascendv2__School_of_Study__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__School_of_Study__c</fullName>
    <label>School of Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>