force-app/main/default/objects/ucinn_ascendv2__Post_Code__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__External_System_ID__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ucinn_ascendv2__Is_Active__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>ucinn_ascendv2__Degree__c</columns>
    <columns>ucinn_ascendv2__Post_Code_Description__c</columns>
    <columns>ucinn_ascendv2__Degree_Description__c</columns>
    <columns>ucinn_ascendv2__Degree_Level_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>